--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ anyhow = "1.0"
 regex = "1.11"
 rust-ini = "0.21"
 once_cell = "1.20"
+path-clean = "1.0"
 
 [dev-dependencies]
 tempfile = "3.16.0"
