--- a/.github/workflows/create_gh_release.yml
+++ b/.github/workflows/create_gh_release.yml
@@ -57,6 +57,15 @@ jobs:
           toolchain: stable
           target: ${{ matrix.rust_target }}
 
+      # Install cross-compilation dependencies for Linux ARM64
+      - name: Install OpenSSL dependencies for Linux ARM64
+        if: matrix.rust_target == 'aarch64-unknown-linux-gnu'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pkg-config gcc-aarch64-linux-gnu libc6-dev-arm64-cross
+          sudo apt-get install -y libssl-dev:arm64
+          echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
+
       - name: Get binary name
         id: get-binary-name
         run: |
