--- a/.github/workflows/create_gh_release.yml
+++ b/.github/workflows/create_gh_release.yml
@@ -25,6 +25,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: darwin
@@ -61,6 +62,7 @@ jobs:
       - name: Install OpenSSL dependencies for Linux ARM64
         if: matrix.rust_target == 'aarch64-unknown-linux-gnu'
         run: |
+          sudo dpkg --add-architecture arm64
           sudo apt-get update
           sudo apt-get install -y pkg-config gcc-aarch64-linux-gnu libc6-dev-arm64-cross
           sudo apt-get install -y libssl-dev:arm64
