--- a/.github/workflows/create_gh_release.yml
+++ b/.github/workflows/create_gh_release.yml
@@ -22,7 +22,7 @@ jobs:
   build:
     name: Build for ${{ matrix.os }} ${{ matrix.arch_name }}
     needs: get-version
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.runner }}
 
     strategy:
       fail-fast: false
@@ -31,22 +31,23 @@ jobs:
           - os: darwin
             rust_target: x86_64-apple-darwin
             arch_name: x64
-
+            runner: macos-13
           - os: darwin
             rust_target: aarch64-apple-darwin
             arch_name: arm64
-
+            runner: macos-latest
           - os: linux
             rust_target: x86_64-unknown-linux-gnu
             arch_name: x64
-
+            runner: ubuntu-latest
           - os: linux
             rust_target: aarch64-unknown-linux-gnu
             arch_name: arm64
-
+            runner: ubuntu-24.04-arm
           - os: windows
             rust_target: x86_64-pc-windows-msvc
             arch_name: x64
+            runner: windows-latest
 
     steps:
       - name: Checkout code
