--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "git-repo-name"
 version = "0.1.0"
 edition = "2021"
 authors = ["Petr Gazarov"]
-description = "A tool to sync git repository names between remote and local"
+description = "Sync git repository names between remote and local"
 
 [dependencies]
 reqwest = { version = "0.12", features = ["json", "blocking"] }
@@ -18,6 +18,16 @@ regex = "1.11"
 rust-ini = "0.21"
 once_cell = "1.20"
 path-clean = "1.0"
+
+# Windows-specific dependencies
+[target.'cfg(windows)'.dependencies]
+windows-acl = "0.3.0"
+windows = { version = "0.60.0", features = [
+  "Win32_Security",
+  "Win32_Foundation",
+  "Win32_Security_Authorization",
+  "Win32_System_Memory",
+] }
 
 [dev-dependencies]
 tempfile = "3.16.0"
