--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ windows = { version = "0.60.0", features = [
   "Win32_System_Memory",
   "Win32_Storage",
   "Win32_System",
+  "Win32_Storage_FileSystem",
+  "Win32_System_WindowsProgramming",
 ] }
 
 [dev-dependencies]
