--- a/.github/workflows/create_gh_release.yml
+++ b/.github/workflows/create_gh_release.yml
@@ -44,10 +44,6 @@ jobs:
             rust_target: aarch64-unknown-linux-gnu
             arch_name: arm64
             runner: ubuntu-24.04-arm
-          - os: windows
-            rust_target: x86_64-pc-windows-msvc
-            arch_name: x64
-            runner: windows-latest
 
     steps:
       - name: Checkout code
@@ -63,23 +59,15 @@ jobs:
         id: get-binary-name
         shell: bash
         run: |
-          if [ "${{ matrix.os }}" = "windows" ]; then
-            echo "value=git-repo-name-${{ needs.get-version.outputs.value }}-${{ matrix.rust_target }}.exe" >> $GITHUB_OUTPUT
-          else
-            echo "value=git-repo-name-${{ needs.get-version.outputs.value }}-${{ matrix.rust_target }}" >> $GITHUB_OUTPUT
-          fi
+          echo "value=git-repo-name-${{ needs.get-version.outputs.value }}-${{ matrix.rust_target }}" >> $GITHUB_OUTPUT
 
       - name: Build binary
         shell: bash
         run: |
           make build_release ARGS="--target ${{ matrix.rust_target }}"
 
-          # Copy the binary to the root directory with the appropriate name
-          if [ "${{ matrix.os }}" = "windows" ]; then
-            cp target/${{ matrix.rust_target }}/release/git-repo-name.exe ${{ steps.get-binary-name.outputs.value }}
-          else
-            cp target/${{ matrix.rust_target }}/release/git-repo-name ${{ steps.get-binary-name.outputs.value }}
-          fi
+          # Copy the binary to the root directory
+          cp target/${{ matrix.rust_target }}/release/git-repo-name ${{ steps.get-binary-name.outputs.value }}
 
       - name: Upload binary artifact
         uses: actions/upload-artifact@v4
@@ -132,4 +120,3 @@ jobs:
             git-repo-name-${{ env.VERSION }}-aarch64-apple-darwin
             git-repo-name-${{ env.VERSION }}-x86_64-unknown-linux-gnu
             git-repo-name-${{ env.VERSION }}-aarch64-unknown-linux-gnu
-            git-repo-name-${{ env.VERSION }}-x86_64-pc-windows-msvc.exe
