--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -62,6 +62,9 @@ jobs:
           git init
           git remote add origin git@github.com:petrgazarov/git-repo-name.git
 
+          # Configure GitHub token
+          git-repo-name config github-token ${{ secrets.GIT_REPO_NAME_METADATA_GITHUB_TOKEN }}
+
           # Run git-repo-name to see if it works
           git-repo-name --help
           git-repo-name fetch
