--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -16,6 +16,7 @@ jobs:
   test_install:
     name: Test on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     strategy:
       fail-fast: false
