--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -71,6 +71,7 @@ jobs:
         run: |
           # Create a test git repository
           mkdir -p test-repo && cd test-repo
+          git config --global init.defaultBranch main
           git init
           git remote add origin git@github.com:petrgazarov/git-repo-name.git
 
